<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.abgp.colorcloud.ui.weather.WeatherFragment"
        android:label="@string/menu_weather"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.abgp.colorcloud.ui.theme.ThemeFragment"
        android:label="@string/menu_change_theme"
        tools:layout="@layout/fragment_theme" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.abgp.colorcloud.ui.password.PasswordFragment"
        android:label="@string/menu_change_password"
        tools:layout="@layout/fragment_password" />
</navigation>